# sono

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  build.ps1  build.sh  imgui.ini  profile.json
assets/: fragment.glsl  vertex.glsl
assets/shaders/: 1.colors.fs.glsl  1.colors.vs.glsl  axes.fs.glsl  colors.fs.glsl  colors.vs.glsl  default.vs.glsl  fragment.glsl  grid.fs.glsl  light_cube.fs.glsl  light_cube.vs.glsl  transform_gizmo.vs.glsl  vertex.glsl
sono/: CMakeLists.txt
sono-editor/: CMakeLists.txt
sono-editor/src/: main.cpp
sono/core/: app.h  entry.h  global.cpp  global.h  snscreen.cpp  snscreen.h  sono.h  system.h
sono/core/common/: defines.h  logger.h  math.h  singleton.h  snassert.h  sys_event_queue.cpp  sys_event_queue.h  sys_events.h  time.cpp  time.h  types.h
sono/core/containers/: itor_wrapper.h
sono/core/debug/: profiler.cpp  profiler.h
sono/core/event/: event_dispatcher.h  event_system.cpp  event_system.h  events.h
sono/core/input/: input_device.h  input_system.cpp  input_system.h  key_code.h  mouse.h
sono/core/math/: lerp.h  mat3.cpp  mat3.h  mat4.cpp  mat4.h  mat_base.h  math.h  quaternion.h  transform.cpp  transform.h  vec.cpp  vec.h  vec2.h  vec3.h  vec4.h  vec_base.h
sono/core/memory/: allocation_info.h  allocator.h  memory_system.cpp  memory_system.h
sono/core/memory/allocators/: arena.cpp  arena.h  heap.cpp  heap.h  pool.cpp  pool.h
sono/core/network/: net_types.h  socket.cpp  socket.h
sono/core/resource/: image.cpp  image.h  resource_base.cpp  resource_base.h  resource_handle.h  resource_manager.cpp  resource_manager.h
sono/core/sngl/: glshader.cpp  glshader.h
sono/includes/sngl/: glshader.h
sono/includes/sono/: snwindow.h  sono.h  types.h
sono/render/: buffer_base.h  buffer_manager.cpp  buffer_manager.h  buffers.h  camera.cpp  camera.h  colors.h  command_list.h  command_queue.h  index_buffer.h  render_command.cpp  render_command.h  render_context.cpp  render_context.h  render_device.cpp  render_device.h  render_op.h  render_pass.h  render_pipeline.h  render_queue.cpp  render_queue.h  render_system.cpp  render_system.h  render_target.h  render_window.cpp  render_window.h  scene.cpp  scene.h  shader.h  snwindow.cpp  snwindow.h  texture.h  vertex_array.h  vertex_buffer.h  vertex_layout.cpp  vertex_layout.h  vertex_type.h
sono/render-backend/sngl/: gl_buffer_base.cpp  gl_buffer_base.h  gl_command.h  gl_command_list.cpp  gl_command_list.h  gl_command_queue.cpp  gl_command_queue.h  gl_commmon.h  gl_common.h  gl_render_device.cpp  gl_render_device.h  gl_render_pass.cpp  gl_render_pass.h  gl_render_pipeline.cpp  gl_render_pipeline.h  gl_render_system.cpp  gl_render_system.h  gl_shader.cpp  gl_shader.h  gl_texture.cpp  gl_texture.h  gl_vertex_array.cpp  gl_vertex_array.h  gl_window.cpp  sngl.h
sono/render/buffer/: buffer_base.h  buffer_manager.cpp  buffer_manager.h  index_buffer.h  vertex_buffer.h
sono/render/debug/: debug_draw.cpp  debug_draw.h  debug_draww.cpp
sono/render/resource/: mesh.h  texture.h  texture_manager.h
sono/render/shader/: shader.h
sono/render/sngl/: gl_buffer_base.cpp  gl_buffer_base.h  gl_buffer_manager.cpp  gl_buffer_manager.h  gl_commmon.h  gl_index_buffer.cpp  gl_index_buffer.h  gl_render_device.cpp  gl_render_device.h  gl_render_system.cpp  gl_render_system.h  gl_shader.cpp  gl_shader.h  gl_texture.cpp  gl_texture.h  gl_vertex_array.cpp  gl_vertex_array.h  gl_vertex_buffer.cpp  gl_vertex_buffer.h  gl_window.cpp  gl_window.h  glebo.cpp  glebo.h  glshader.cpp  glshader.h  gltexture.cpp  gltexture.h  glvao.cpp  glvao.h  glvbo.cpp  glvbo.h  sngl.h
sono/src/: logger.h  main.cpp  snwindow.cpp  time.cpp
sono/src/common/: singleton.hpp  types.h
sono/src/sngl/: glshader.cpp
sono/vendors/glad/: CMakeLists.txt
sono/vendors/glad/include/glad/: glad.h
sono/vendors/glad/src/: glad.c
tests/: CMakeLists.txt
tests/sono/: CMakeLists.txt
tests/sono/math/: test_matrix.cpp  test_quaternion.cpp
tests/sono/src/: main.cpp
